<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_by_number">

    <fragment
        android:id="@+id/navigation_by_number"
        android:name="com.harshalbhatia.whatsopen.FirstFragment"
        android:label="@string/nav_by_number"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/navigation_call_logs"
        android:name="com.harshalbhatia.whatsopen.CallLogsFragment"
        android:label="@string/nav_call_logs"
        tools:layout="@layout/fragment_call_logs" />

    <fragment
        android:id="@+id/navigation_clipboard"
        android:name="com.harshalbhatia.whatsopen.ClipboardFragment"
        android:label="@string/nav_clipboard"
        tools:layout="@layout/fragment_clipboard" />
</navigation>
