<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clipboard_title"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_title_subtitle"
            android:text="@string/clipboard_subtitle"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numbers_input_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/spacing_subtitle_content"
            android:hint="@string/clipboard_hint"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_input"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_input"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_input"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_input"
            app:helperText="@string/clipboard_helper_text"
            app:layout_constraintTop_toBottomOf="@id/subtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numbers_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/process_numbers_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/spacing_input_button"
            android:contentDescription="@string/open_in_whatsapp"
            android:text="@string/open_in_whatsapp"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius_input"
            app:icon="@drawable/ic_whatsapp"
            app:layout_constraintTop_toBottomOf="@id/numbers_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
